--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1732,14 +1732,45 @@
 
 		pinctrl_usdhc3_2: usdhc3grp-2 {
 			fsl,pins = <
-				MX6QDL_PAD_SD3_CMD__SD3_CMD    0x17059
-				MX6QDL_PAD_SD3_CLK__SD3_CLK    0x10059
-				MX6QDL_PAD_SD3_DAT0__SD3_DATA0 0x17059
-				MX6QDL_PAD_SD3_DAT1__SD3_DATA1 0x17059
-				MX6QDL_PAD_SD3_DAT2__SD3_DATA2 0x17059
-				MX6QDL_PAD_SD3_DAT3__SD3_DATA3 0x17059
+				MX6QDL_PAD_SD3_CMD__SD3_CMD     0x17059
+				MX6QDL_PAD_SD3_CLK__SD3_CLK     0x10059
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0  0x17059
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1  0x17059
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2  0x17059
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3  0x17059
+                                MX6QDL_PAD_SD3_DAT7__GPIO6_IO17 0x13059   // reserve two pins from sd1 for wl8 gpio, this is pulled low at reset for WL_EN
+                                MX6QDL_PAD_SD3_RST__GPIO7_IO08  0x13059   // this is for wl_irq which driver will configure as an input with a pull down
+                                MX6QDL_PAD_SD3_DAT6__GPIO6_IO18 0x13059   // used for BT_EN 
+
 			>;
 		};
+		pinctrl_usdhc3_2_100mhz: usdhc3grp-2-100mhz {
+			fsl,pins = <
+				MX6QDL_PAD_SD3_CMD__SD3_CMD     0x170B9
+				MX6QDL_PAD_SD3_CLK__SD3_CLK     0x100B9
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0  0x170B9
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1  0x170B9
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2  0x170B9
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3  0x170B9
+                                MX6QDL_PAD_SD3_DAT7__GPIO6_IO17 0x130B9   // reserve two pins from sd1 for wl8 gpio, this is pulled low at reset for WL_EN
+                                MX6QDL_PAD_SD3_RST__GPIO7_IO08  0x130B9   // this is for wl_irq which driver will configure as an input with a pull down
+                                MX6QDL_PAD_SD3_DAT6__GPIO6_IO18 0x130B9   // used for BT_EN 
+			>;
+		};
+		pinctrl_usdhc3_2_200mhz: usdhc3grp-2-200mhz {
+			fsl,pins = <
+				MX6QDL_PAD_SD3_CMD__SD3_CMD     0x170F9
+				MX6QDL_PAD_SD3_CLK__SD3_CLK     0x100F9
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0  0x170F9
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1  0x170F9
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2  0x170F9
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3  0x170F9
+                                MX6QDL_PAD_SD3_DAT7__GPIO6_IO17 0x130F9   // reserve two pins from sd1 for wl8 gpio, this is pulled low at reset for WL_EN
+                                MX6QDL_PAD_SD3_RST__GPIO7_IO08  0x130F9   // this is for wl_irq which driver will configure as an input with a pull down
+                                MX6QDL_PAD_SD3_DAT6__GPIO6_IO18 0x130F9   // used for BT_EN 
+			>;
+		};
+
 	};
 
 	usdhc4 {
